# ore-ace

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: claim.yml  difficulty.yml  docker-image.yml  priority.yml
examples/docker/: claim-example.yml  min-example.yml  mine-example.yml
examples/generate/: claim.js  mine.js  output-mine.yaml
src/: args.rs  balance.rs  busses.rs  claim.rs  constant.rs  cu_limits.rs  initialize.rs  jito.rs  jito_send_and_confirm.rs  main.rs  mine.rs  register.rs  send_and_confirm.rs  treasury.rs  update_admin.rs  update_difficulty.rs  utils.rs
transfer/: config.js  main.js  package.json  readme.md
transfer/utils/: adapters.js  decimals.js  initiali.js  priorityFee.js  readAndValidate.js
