[package]
name = "ore-cli"
version = "1.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A command line interface for ORE cryptocurrency mining."
documentation = "https://ore.supply"
homepage = "https://ore.supply"
repository = "https://github.com/regolith-labs/ore-cli"
readme = "./README.md"
keywords = ["solana", "crypto", "mining"]

[[bin]]
name = "ore"
path = "src/main.rs"

[features]
default = []
admin = []

[dependencies]
bincode = "1.3.3"
bs58 = "0.5.1"
bytemuck = "1.16"
cached = "0.46.1"
chrono = "0.4.38"
clap = { version = "4.4.12", features = ["derive"] }
colored = "2.0"
drillx = "2.0.0"
eyre = "0.6.5"
futures = "0.3.30"
num_cpus = "1.16.0"
ore-api = "=2.1.0"
ore-utils = "=2.1.0"
rand = "0.8.4"
reqwest = { version = "0.12.3", features = ["json"] }
solana-cli-config = "^1.18"
solana-client = "^1.18"
solana-program = "^1.18"
solana-rpc-client = "^1.18"
solana-sdk = "^1.18"
solana-transaction-status = "^1.18"
spl-token = { version = "^4", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "^2.3", features = [
  "no-entrypoint",
] }
tokio = "1.35.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
env_logger = "0.9.3"
tracing = "0.1.40"

